# 25L-ZZSN-privacy-attacks-against-ars

./: .gitignore  .gitmodules  README.md  audiocraft_example.py  fad.py  main.py  memorization.ipynb  pyproject.toml
analysis/: di_audio.py  di_codebooks.py  mia_performance_audio.py  mia_performance_codebooks.py  utils.py
conf/: config.yaml
conf/attack/: find_memorized_audio.yaml  find_memorized_figaro.yaml  gen_memorized_audio.yaml  gen_memorized_figaro.yaml  llm_mia.yaml  llm_mia_audio_cfg.yaml  llm_mia_cfg.yaml  llm_mia_codebooks.yaml
conf/dataset/: audiocaps.yaml  imagenet.yaml  lakhmidi.yaml  musiccaps.yaml
conf/model/: audiogen_medium.yaml  figaro.yaml  musicgen_small.yaml  var_16.yaml
src/attacks/: __init__.py  data_source.py  extractor.py  find_memorized.py  find_memorized_audio.py  find_memorized_figaro.py  gen_memorized.py  gen_memorized_audio.py  gen_memorized_figaro.py  llm_mia.py  mem_info.py
src/dataloaders/: __init__.py  audio_dataloader.py  audiocraft_dataloader.py  figaro_dataloader.py
src/evaluation/: audio_embedding.py  evaluate.py
src/local_datasets/: __init__.py  audio_dataset.py  dataset.py
src/models/: GeneralVARWrapper.py  VAR.py  __init__.py  audiocraft.py  figaro.py
