[project]
name = "25L-ZZSN-privacy-attacks-against-ars"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Paweł Kochański", email = "pawilioxion@gmail.com"},
]
dependencies = ["scikit-learn>=1.6.1", "hydra-core>=1.3.2", "torch>=2.6.0", "pandas>=2.2.3", "huggingface-hub[hf_xet]>=0.31.4", "torchprofile>=0.0.4", "torchmetrics>=1.7.1", "matplotlib>=3.10.1", "seaborn>=0.13.2", "torchaudio>=2.7.0", "soundfile>=0.13.1", "av>=14.4.0", "julius>=0.2.7", "einops>=0.8.1", "xformers>=0.0.30", "flashy>=0.0.2", "num2words>=0.5.14", "spacy>=3.8.6", "transformers>=4.52.2", "librosa>=0.11.0", "torchdiffeq>=0.2.5", "sentencepiece>=0.2.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
